--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -60,12 +60,13 @@
                     app:layout_constraintTop_toBottomOf="@+id/view"
                     tools:src="@drawable/movie_poster_placeholder" />
 
+
                 <TextView
                     android:id="@+id/original_title_label_tv"
                     style="@style/MovieDetailsContentTitleLabel"
                     android:layout_marginLeft="8dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="0dp"
+                    android:layout_marginTop="8dp"
                     android:text="@string/original_title"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintLeft_toLeftOf="@+id/guideline"
@@ -149,28 +150,21 @@
                 <TextView
                     android:id="@+id/videos_title_label"
                     style="@style/MovieDetailsContentTitleLabel"
-                    android:layout_margin="8dp"
                     android:text="@string/videos"
-                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_details_overview" />
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/movie_details_videos_rv"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@id/tv_details_overview"
                     android:layout_marginStart="8dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/videos_title_label" />
+                    app:layout_constraintHorizontal_bias="0.0" />
 
                 <TextView
                     android:id="@+id/reviews_title_label"
                     style="@style/MovieDetailsContentTitleLabel"
-                    android:layout_margin="8dp"
                     android:text="@string/reviews"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -180,10 +174,7 @@
                     android:id="@+id/movie_details_review_rv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_margin="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -195,6 +186,19 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     app:layout_constraintGuide_percent="0.4" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/movie_details_videos_rv"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@id/videos_title_label"
+                    android:layout_marginRight="8dp" />
 
             </android.support.constraint.ConstraintLayout>
 
