--- a/app/src/main/res/layout/movie_review_view.xml
+++ b/app/src/main/res/layout/movie_review_view.xml
@@ -31,6 +31,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
-            android:background="@color/colorPrimary" />
+            android:background="@color/colorPrimary"
+            android:contentDescription="@string/break_line" />
     </LinearLayout>
 </layout>
