--- a/app/src/main/res/layout/movie_video_button.xml
+++ b/app/src/main/res/layout/movie_video_button.xml
@@ -12,39 +12,63 @@
             android:id="@+id/imageView"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginBottom="0dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="0dp"
+            android:contentDescription="@string/trailer_play_icon"
             android:padding="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             android:src="@drawable/ic_play_arrow_black_24dp"
-            android:layout_marginLeft="0dp"
-            android:layout_marginBottom="4dp"
-            app:layout_constraintBottom_toTopOf="@+id/imageView2" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintVertical_bias="0.5"
+            app:layout_constraintTop_toBottomOf="@+id/video_title_tv"
+            app:layout_constraintBottom_toTopOf="@+id/video_title_tv" />
 
         <TextView
             android:id="@+id/video_title_tv"
             style="@style/MovieDetailsContentTitleLabel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:layout_marginStart="16dp"
-            tools:text="Video Title"
-            android:layout_marginTop="4dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"
-            android:layout_marginBottom="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/imageView"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintLeft_toRightOf="@+id/imageView"
-            android:layout_marginLeft="16dp"
-            app:layout_constraintVertical_bias="0.491" />
+            app:layout_constraintRight_toLeftOf="@+id/detail_share_video_ib"
+            tools:text="Wonder Woman - Rise of the Warrior [oficcial final trailer]"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/detail_share_video_ib"
+            android:layout_width="56dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="8dp"
+            android:background="#0000"
+            android:contentDescription="@string/share_trailer_accessibility"
+            android:src="@drawable/ic_share_black_24dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
+            android:id="@+id/imageView2"
             android:layout_width="0dp"
             android:layout_height="1dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
             android:background="@color/colorPrimary"
+            android:contentDescription="@string/break_line"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintLeft_toLeftOf="@id/video_title_tv"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/video_title_tv"
-            android:id="@+id/imageView2" />
+            app:layout_constraintVertical_bias="0.5" />
     </android.support.constraint.ConstraintLayout>
 </layout>
